--- a/ux.html
+++ b/ux.html
@@ -99,7 +99,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/iAdvize/743999692242636-ui-ux-designer-h-f'>iAdvize UI/UX Designer H/F | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/iAdvize/743999692242636-ui-ux-designer-h-f'>iAdvize UI/UX Designer H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -167,7 +167,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medici-living.join.com/jobs/265677-ux-ui-designer-m-f-d'>Job @ Medici Living Digital Services (Berlin): UX/... | JOIN</a></h5> 
+<h5><a href='https://medici-living.join.com/jobs/265677-ux-ui-designer-m-f-d'>Job @ Medici Living Digital Services (Berlin): UX/... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -215,7 +215,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://maisonmoderne.recruiterbox.com/jobs/fk03flh'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://maisonmoderne.recruiterbox.com/jobs/fk03flh'>
     UI/UX Designer - 1 year contract (W/M) at Maison Moderne
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -251,13 +251,13 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mekari.recruiterbox.com/jobs/fk03f7q/'>
+<h5><a href='https://mekari.recruiterbox.com/jobs/fk03f7q/'>
     UX Writer at MEKARI (PT. Mid Solusi Nusantara)
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/clearpoint/job/sfyo6tq94fsmsfaeb5deuta11e/User-Experience-UX-Architect-Washington-DC'>UX Architect | My Crelate Portal</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/clearpoint/job/sfyo6tq94fsmsfaeb5deuta11e/User-Experience-UX-Architect-Washington-DC'>UX Architect | My Crelate Portal</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -358,7 +358,7 @@ or check?...</p>
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/netflix/6f4e48f2-b850-4e81-90c4-6a1610610cb7'>Netflix - Data Experience - Software Engineer (UX)</a></h5> 
+<h5><a href='https://jobs.lever.co/netflix/6f4e48f2-b850-4e81-90c4-6a1610610cb7'>Netflix - Data Experience - Software Engineer (UX)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Netflix is the leading online video subscription service, reaching hundreds of 
 millions of US and international households. Netflix became well known as a 
@@ -406,7 +406,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p>11. Juli 2019 ... Bridgemaker GmbH has a job opening for Product Designer UX & UI (m/w/d) - 
 uptodate in Munich (published: 15.07.2019). Apply now or check the other?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/code42/job/oJPjafwL'>Code42 Software Careers - Senior Product Designer (UX)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/code42/job/oJPjafwL'>Code42 Software Careers - Senior Product Designer (UX)</a></h5> 
 <p><span class="badge badge-light">Minneapolis</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -479,7 +479,7 @@ logo. Senior UX-Designer (m/w/x). Frankfurt, GermanyEmployee. allen Stellen?...<
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
