--- a/data-engineer.html
+++ b/data-engineer.html
@@ -56,6 +56,11 @@
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
+<h5><a href='https://solvay.avature.net/careers/JobDetail/2019-07-19/9500'>VIE - R&I data engineer - Chemoinformatics | Solvay</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>6 days ago ... This position is in Solvay Research & Innovation Centre Brussels, in the recently 
+created Data Management Excellence Team. Within this multidisciplinary team?...</p>
+<hr/>
 <h5><a href='https://jobs.crelate.com/portal/averityteam/job/5ip3ywgqb7zop5nibubdnxrp1h'>Senior Data Engineer | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
@@ -138,7 +143,7 @@ with the role for which you're applying??. Please tell us why you selected such 
 <p><span class="badge badge-light">Hillsboro, OR, USA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aginic.workable.com/j/496FE25330'>Aginic - Jobs: Data Engineer (Melbourne) - Apply online</a></h5> 
+<h5><a href='https://aginic.workable.com/j/496FE25330'>Aginic - Jobs: Data Engineer (Melbourne) - Apply online</a></h5> 
 <p><span class="badge badge-light">Melbourne Melbourne Melbourne Melbourne, Victoria, Australia</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -146,7 +151,7 @@ with the role for which you're applying??. Please tell us why you selected such 
 <p><span class="badge badge-light">Sydney Sydney Sydney Sydney Sydney</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/nextgenamerica/jobs/1791548'>Job Application for Data Engineer  at NextGen America</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nextgenamerica/jobs/1791548'>Job Application for Data Engineer  at NextGen America</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -193,7 +198,7 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 broad disciplines from software, artificial intelligence/machine learning, electronic
 ,?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/saama/job/oBDoafww'>Saama Technologies Inc Careers - Cloud Data Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/saama/job/oBDoafww'>Saama Technologies Inc Careers - Cloud Data Engineer</a></h5> 
 <p><span class="badge badge-light">Campbell California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -211,7 +216,7 @@ the job details and apply today!</p>
 <p>Jul 10, 2019 ... 0839 095 Y478 0000|Technology Division|Core Engineering|Data Intelligence|
 Core Engineering is now hiring a Data Engineer (DIO - Edge) - Client Data?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fractalanalytics.applytojob.com/apply/jLAj2ROWrk/Senior-Data-Engineer'>Senior Data Engineer - Fractal Analytics - Career Page</a></h5> 
+<h5><a href='http://fractalanalytics.applytojob.com/apply/jLAj2ROWrk/Senior-Data-Engineer'>Senior Data Engineer - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light">Mumbai Maharashtra, India</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -229,7 +234,7 @@ talk to?...</p>
 <p><span class="badge badge-light">Richmond</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/vaynermedia/jobs/1532691'>Job Application for TRACER: Data Engineer at VaynerMedia LLC</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/vaynermedia/jobs/1532691'>Job Application for TRACER: Data Engineer at VaynerMedia LLC</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Tracer is a marketing data aggregation and reporting platform. Our technology 
 was born out of the challenges facing today's marketers. Incubated within?...</p>
@@ -325,7 +330,7 @@ online content network for information and online operations of CBS Corporation
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://elinvar.recruitee.com/o/data-engineer-mfdiv-berlin'>
+<h5><a href='https://elinvar.recruitee.com/o/data-engineer-mfdiv-berlin'>
       Data Engineer (m/f/div) - Elinvar GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -468,10 +473,6 @@ Atypon Systems.</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/advent-software/job/otVzafwR'>SS&amp;C Advent Careers - Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-19</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/advent-software/job/owghafwX'>SS&amp;C Advent Careers - Data Engineer</a></h5> 
-<p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
 
