--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -96,7 +96,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wargamingru/jobs/1790572'>Job Application for Business Intelligence Analyst  at Wargaming CIS</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wargamingru/jobs/1790572'>Job Application for Business Intelligence Analyst  at Wargaming CIS</a></h5> 
 <p><span class="badge badge-light">Prague</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -108,7 +108,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p><span class="badge badge-light">Redwood City, CARedwood City, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/omaze/jobs/4367960002'>Job Application for Director, Business Intelligence at Omaze</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/omaze/jobs/4367960002'>Job Application for Director, Business Intelligence at Omaze</a></h5> 
 <p><span class="badge badge-light">Los Angeles Los Angeles California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -168,7 +168,7 @@ Media Hungary Kft.</p>
 believe a workplace food program is something employees should love and look
 ?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/temper/jobs/4313851002'>Job Application for Business Intelligence Analyst at Temper</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/temper/jobs/4313851002'>Job Application for Business Intelligence Analyst at Temper</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... As our Business Intelligence Analyst you will be our driver and executer in 
 developing and implementing metrics and reporting to improve our business and
@@ -194,7 +194,7 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light">Seattle Seattle San Francisco New York London Mumbai</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/logix/jobs/1782486'>Job Application for Business Intelligence Developer at Logix Federal Credit Union</a></h5> 
+<h5><a href='https://boards.greenhouse.io/logix/jobs/1782486'>Job Application for Business Intelligence Developer at Logix Federal Credit Union</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -236,11 +236,11 @@ in Herten (published: 12.07.2019). Apply now or check the other available jobs.<
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/sojern/jobs/business-intelligence-analyst-bnMASIQKWr6ApraKkRyNN8'>Business Intelligence Analyst #1067 job at Sojern in Omaha, NE, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/sojern/jobs/business-intelligence-analyst-bnMASIQKWr6ApraKkRyNN8'>Business Intelligence Analyst #1067 job at Sojern in Omaha, NE, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/mavenlink/job/oXByafw0'>Mavenlink Careers - Business Intelligence Consultant</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/mavenlink/job/oXByafw0'>Mavenlink Careers - Business Intelligence Consultant</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Today's leading companies are able to transform their data into insights and 
 strategic decisions that drive growth. The Business Intelligence team at 
@@ -331,7 +331,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/imperva/job/oX4oafwj'>Imperva Careers - Business Intelligence Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/imperva/job/oX4oafwj'>Imperva Careers - Business Intelligence Engineer</a></h5> 
 <p><span class="badge badge-light">Redwood City California</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -455,7 +455,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/groupm-emea/job/oR1yafwk'>GroupM EMEA Careers - Senior Business Intelligence Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/groupm-emea/job/oR1yafwk'>GroupM EMEA Careers - Senior Business Intelligence Engineer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -471,7 +471,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
